added a readme and began implemeting some functions

--- a/example_project/logilang.toml
+++ b/example_project/logilang.toml
@@ -1,4 +1,5 @@
 name = "project_name"
 compiler_version = "0.0.1"
 output_mode = "console"
+memory = 1024
 modules = ["module1", "module2", "module3"]
